ci/kuberfiles/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dummyimage
  namespace: dummyimage
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dummyimage
